@@ -3,7 +3,11 @@ Fixed a bug where alternative decimal delimiters and thousands separators were n
 Fixed a bug causing a null pointer exception when writing an MSPDI file.
 Fixed a bug in MSPDI files where default values were being written incorrectly for some task attributes.
 Fixed a bug with MSPDI file date handling in non GMT time zones.
+Fixed a bug in processing calendar data where data block is not a multiple of 12 bytes
+Fixed a bug processing tables where column data is null
 Added support for task calendars.
+Fixed checkstyle code warnings.
+Fixed Eclipse code warnings.
 
 Version 0.0.19
 Fixed a bug reading table data from certain MPP8 files
